<resources>
    <string name="app_name">UnionApp</string>
    <string name="enter_code">Please Enter Invite Code</string>
    <string name="continue_button">Continue</string>
    <string name="request">The honor of your presence is requested at the marriage of</string>
    <string name="attend_button">yes, i can attend</string>
    <string name="decline_button">cannot make it</string>
    <string name="amp">&amp;</string>
    <string name="on_text">on</string>
    <string name="in_text">in</string>
    <string name="thank_you_text">we are excited to have you!</string>
    <string name="registry_button">gift registry</string>
    <string name="date_string">The wedding is %1$s days away.</string>
</resources>
